--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<!--  <link rel="icon" href="../test/favicon.ico" /> -->
   <link rel="icon" href="favicon.ico" />
-  <title>Géoportail LiDAR du SITN</title>
-  <link rel="stylesheet" type="text/css" href="./potree/build/potree/potree.css">
-  <link rel="stylesheet" type="text/css" href="./potree/libs/jquery-ui/jquery-ui.min.css">
-  <link rel="stylesheet" type="text/css" href="./potree/libs/openlayers3/ol.css">
-  <link rel="stylesheet" type="text/css" href="./potree/libs/spectrum/spectrum.css">
-  <link rel="stylesheet" type="text/css" href="./potree/libs/jstree/themes/mixed/style.css">
+  <title>Géoportail LiDAR du SIT-Jura</title>
+  <link rel="stylesheet" type="text/css" href="../build/potree/potree.css">
+  <link rel="stylesheet" type="text/css" href="../libs/jquery-ui/jquery-ui.min.css">
+  <link rel="stylesheet" type="text/css" href="../libs/openlayers3/ol.css">
+  <link rel="stylesheet" type="text/css" href="../libs/spectrum/spectrum.css">
+  <link rel="stylesheet" type="text/css" href="../libs/jstree/themes/mixed/style.css">
   <link rel="stylesheet" href="sitnapp/css/sitn.css" type="text/css">
 </head>
 
@@ -20,23 +21,23 @@
     var isIE = /*@cc_on!@*/false || !!document.documentMode;
       if (isIE) {
         alert('Internet Explorer n\'est pas supporté pour cette application, vous allez être redirigés vers le Géoportail 2D');
-        window.location.replace("https://sitn.ne.ch");
+        window.location.replace("https://geo.jura.ch");
       }
   </script>
-  <script src="./potree/libs/jquery/jquery-3.1.1.min.js"></script>
-  <script src="./potree/libs/spectrum/spectrum.js"></script>
-  <script src="./potree/libs/jquery-ui/jquery-ui.min.js"></script>
-  <script src="./potree/libs/three.js/build/three.min.js"></script>
-  <script src="./potree/libs/three.js/extra/lines.js"></script>
-  <script src="./potree/libs/other/BinaryHeap.js"></script>
-  <script src="./potree/libs/tween/tween.min.js"></script>
-  <script src="./potree/libs/d3/d3.js"></script>
-  <script src="./potree/libs/proj4/proj4.js"></script>
-  <script src="./potree/libs/openlayers3/ol.js"></script>
-  <script src="./potree/libs/i18next/i18next.js"></script>
-  <script src="./potree/libs/jstree/jstree.js"></script>
-  <script src="./potree/build/potree/potree.js"></script>
-  <script src="./potree/libs/plasio/js/laslaz.js"></script>
+  <script src="../libs/jquery/jquery-3.1.1.min.js"></script>
+  <script src="../libs/spectrum/spectrum.js"></script>
+  <script src="../libs/jquery-ui/jquery-ui.min.js"></script>
+  <script src="../libs/three.js/build/three.min.js"></script>
+  <script src="../libs/three.js/extra/lines.js"></script>
+  <script src="../libs/other/BinaryHeap.js"></script>
+  <script src="../libs/tween/tween.min.js"></script>
+  <script src="../libs/d3/d3.js"></script>
+  <script src="../libs/proj4/proj4.js"></script>
+  <script src="../libs/openlayers3/ol.js"></script>
+  <script src="../libs/i18next/i18next.js"></script>
+  <script src="../libs/jstree/jstree.js"></script>
+  <script src="../build/potree/potree.js"></script>
+  <script src="../libs/plasio/js/laslaz.js"></script>
   
   <script src="sitnapp/js/sitn.js"></script>
   <script src="sitnapp/js/gmf_search_box.js"></script>
@@ -57,10 +58,10 @@
   window.viewer = new Potree.Viewer(document.getElementById("potree_render_area"));
     
   viewer.setEDLEnabled(true);
-  viewer.setFOV(60);
+  viewer.setFOV(5);
   viewer.setPointBudget(4*1000*1000);
   viewer.loadSettingsFromURL();
-  viewer.setDescription('Géoportail LiDAR du<a target=_blank href="https://sitn.ne.ch/"> SITN</a>');
+  viewer.setDescription('Géoportail LiDAR du<a target=_blank href="https://geo.jura.ch/"> SIT-Jura</a>');
   viewer.loadGUI(() => {
     viewer.setLanguage('fr');
     $("#menu_scene").next().show();
@@ -81,25 +82,11 @@
     async function loadDatasets(){
       let scene = viewer.scene;
       {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/stereo/2020/virtualcity/metadata.json"); 
+        let result = await Potree.loadPointCloud("https://geo-test.jura.ch/lidar/pointclouds/2022/jura/metadata.json"); 
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Virtual City bâti 3D > LiDAR";
-        material.size = 1.5;
-        material.pointSizeType = Potree.PointSizeType.FIXED;
-        material.activeAttributeName = "rgba";
-        material.shape = Potree.PointShape.CIRCLE;
-        scene.addPointCloud(pointcloud);
-        viewer.fitToScreen();
-        pointcloud.visible = false;
-      }
-      {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/aerial/2018/metadata.json"); 
-        let pointcloud = result.pointcloud;
-        let material = pointcloud.material;
-
-        pointcloud.name = "SITN LiDAR 2018-2019";
+        pointcloud.name = "Lidar 2022 Jura - Swisssurface 3D";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.FIXED;
         material.activeAttributeName = "rgba";
@@ -109,11 +96,11 @@
         pointcloud.visible = true;
       }
       {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/aerial/2016/trees2016/metadata.json");
+        let result = await Potree.loadPointCloud("https://geo-test.jura.ch/lidar/pointclouds/2022/hetre_ajoie/metadata.json");
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "SITN LiDAR 2016 - arbres";
+        pointcloud.name = "Lidar 2022 Jura Helimap - STDL";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.FIXED;
         material.shape = Potree.PointShape.CIRCLE;
@@ -122,24 +109,11 @@
         pointcloud.visible = false;
       }
       {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/aerial/2016/lidar2016/metadata.json");
+        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/aerial/2022/jura/metadata.json"); 
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "SITN LiDAR 2016";
-        material.size = 1.5;
-        material.pointSizeType = Potree.PointSizeType.FIXED;
-        material.shape = Potree.PointShape.CIRCLE;
-        scene.addPointCloud(pointcloud);
-        viewer.fitToScreen();
-        pointcloud.visible = false;
-      }
-      {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/aerial/2010/metadata.json");
-        let pointcloud = result.pointcloud;
-        let material = pointcloud.material;
-
-        pointcloud.name = "SITN LiDAR 2010";
+        pointcloud.name = "Lidar 2022 Jura (NE) - Swisssurface 3D";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.FIXED;
         material.activeAttributeName = "rgba";
@@ -147,47 +121,6 @@
         scene.addPointCloud(pointcloud);
         viewer.fitToScreen();
         pointcloud.visible = false;
-      }
-      {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/aerial/2001/metadata.json");
-        let pointcloud = result.pointcloud;
-        let material = pointcloud.material;
-
-        pointcloud.name = "SITN LiDAR 2001";
-        material.size = 1.5;
-        material.pointSizeType = Potree.PointSizeType.FIXED;
-        material.activeAttributeName = "rgba";
-        material.shape = Potree.PointShape.CIRCLE;
-        scene.addPointCloud(pointcloud);
-        viewer.fitToScreen();
-        pointcloud.visible = false;
-      }
-      {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/bathymetry/lacs3d/metadata.json");
-        let pointcloud = result.pointcloud;
-        let material = pointcloud.material;
-
-        pointcloud.name = "Lacs";
-        material.size = 1.5;
-        material.pointSizeType = Potree.PointSizeType.FIXED;
-        material.activeAttributeName = "rgba";
-        material.shape = Potree.PointShape.CIRCLE;
-        pointcloud.visible = false;
-        scene.addPointCloud(pointcloud);
-        viewer.fitToScreen();
-      }
-      {
-        let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/bathymetry/bathy2020/metadata.json");
-        let pointcloud = result.pointcloud;
-        let material = pointcloud.material;
-
-        pointcloud.name = "Bathymétrie sonar 2012-2016 et lidar 2020";
-        material.size = 1.5;
-        material.pointSizeType = Potree.PointSizeType.FIXED;
-        material.shape = Potree.PointShape.CIRCLE;
-        material.activeAttributeName = "rgba";
-        pointcloud.visible = true;
-        scene.addPointCloud(pointcloud);
       }
 
     };
