--- a/index_lidar_app.html
+++ b/index_lidar_app.html
@@ -5,14 +5,15 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <link rel="icon" href="/potree/lidar_app/favicon.ico" />
+<!--  <link rel="icon" href="../test/favicon.ico" /> -->
+  <link rel="icon" href="favicon.ico" />
   <title>Géoportail LiDAR du SIT-Jura</title>
-  <link rel="stylesheet" type="text/css" href="/potree/build/potree/potree.css">
-  <link rel="stylesheet" type="text/css" href="/potree/libs/jquery-ui/jquery-ui.min.css">
-  <link rel="stylesheet" type="text/css" href="/potree/libs/openlayers3/ol.css">
-  <link rel="stylesheet" type="text/css" href="/potree/libs/spectrum/spectrum.css">
-  <link rel="stylesheet" type="text/css" href="/potree/libs/jstree/themes/mixed/style.css">
-  <link rel="stylesheet" href="/potree/lidar_app/sitnapp/css/sitn.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="../build/potree/potree.css">
+  <link rel="stylesheet" type="text/css" href="../libs/jquery-ui/jquery-ui.min.css">
+  <link rel="stylesheet" type="text/css" href="../libs/openlayers3/ol.css">
+  <link rel="stylesheet" type="text/css" href="../libs/spectrum/spectrum.css">
+  <link rel="stylesheet" type="text/css" href="../libs/jstree/themes/mixed/style.css">
+  <link rel="stylesheet" href="sitnapp/css/sitn.css" type="text/css">
 </head>
 
 <body>
@@ -23,23 +24,23 @@
         window.location.replace("https://geo.jura.ch");
       }
   </script>
-  <script src="/potree/libs/jquery/jquery-3.1.1.min.js"></script>
-  <script src="/potree/libs/spectrum/spectrum.js"></script>
-  <script src="/potree/libs/jquery-ui/jquery-ui.min.js"></script>
-  <script src="/potree/libs/three.js/build/three.min.js"></script>
-  <script src="/potree/libs/three.js/extra/lines.js"></script>
-  <script src="/potree/libs/other/BinaryHeap.js"></script>
-  <script src="/potree/libs/tween/tween.min.js"></script>
-  <script src="/potree/libs/d3/d3.js"></script>
-  <script src="/potree/libs/proj4/proj4.js"></script>
-  <script src="/potree/libs/openlayers3/ol.js"></script>
-  <script src="/potree/libs/i18next/i18next.js"></script>
-  <script src="/potree/libs/jstree/jstree.js"></script>
-  <script src="/potree/build/potree/potree.js"></script>
-  <script src="/potree/libs/plasio/js/laslaz.js"></script>
+  <script src="../libs/jquery/jquery-3.1.1.min.js"></script>
+  <script src="../libs/spectrum/spectrum.js"></script>
+  <script src="../libs/jquery-ui/jquery-ui.min.js"></script>
+  <script src="../libs/three.js/build/three.min.js"></script>
+  <script src="../libs/three.js/extra/lines.js"></script>
+  <script src="../libs/other/BinaryHeap.js"></script>
+  <script src="../libs/tween/tween.min.js"></script>
+  <script src="../libs/d3/d3.js"></script>
+  <script src="../libs/proj4/proj4.js"></script>
+  <script src="../libs/openlayers3/ol.js"></script>
+  <script src="../libs/i18next/i18next.js"></script>
+  <script src="../libs/jstree/jstree.js"></script>
+  <script src="../build/potree/potree.js"></script>
+  <script src="../libs/plasio/js/laslaz.js"></script>
   
-  <script src="/potree/lidar_app/sitnapp/js/sitn.js"></script>
-  <script src="/potree/lidar_app/sitnapp/js/gmf_search_box.js"></script>
+  <script src="sitnapp/js/sitn.js"></script>
+  <script src="sitnapp/js/gmf_search_box.js"></script>
   
   <!-- INCLUDE ADDITIONAL DEPENDENCIES HERE -->
 
@@ -85,7 +86,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Lidar 2022 - Swisssurface 3D";
+        pointcloud.name = "Lidar 2022 Jura - Swisssurface 3D";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.FIXED;
         material.activeAttributeName = "rgba";
@@ -99,7 +100,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Lidar 2022 Helimap - STDL";
+        pointcloud.name = "Lidar 2022 Jura Helimap - STDL";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.FIXED;
         material.shape = Potree.PointShape.CIRCLE;
@@ -112,7 +113,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Lidar 2022 (NE) - Swisssurface 3D";
+        pointcloud.name = "Lidar 2022 Jura (NE) - Swisssurface 3D";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.FIXED;
         material.activeAttributeName = "rgba";
