--- a/index.html
+++ b/index.html
@@ -87,32 +87,20 @@
     async function loadDatasets(){
       let scene = viewer.scene;
       {
-        let result = await Potree.loadPointCloud("https://geo-test.jura.ch/lidar/pointclouds/aerial/2022/jura/metadata.json"); 
+        let result = await Potree.loadPointCloud("https://geo-test.jura.ch/geo3d/pointclouds/sdtl/2022/hetre_ajoie/metadata.json"); 
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Lidar 2022 - Swisssurface 3D";
+        pointcloud.name = "Jura Helimap 2022";
         material.size = 1.5;
-        material.pointSizeType = Potree.PointSizeType.FIXED;
+        material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
         material.activeAttributeName = "rgba";
-        material.shape = Potree.PointShape.CIRCLE;
-        scene.addPointCloud(pointcloud);
-        viewer.fitToScreen();
-        pointcloud.visible = true;
-      }
-      {
-        let result = await Potree.loadPointCloud("https://geo-test.jura.ch/lidar/pointclouds/aerial/2022/hetre_ajoie/metadata.json");
-        let pointcloud = result.pointcloud;
-        let material = pointcloud.material;
-
-        pointcloud.name = "Lidar 2022 Helimap - STDL";
-        material.size = 1.5;
-        material.pointSizeType = Potree.PointSizeType.FIXED;
         material.shape = Potree.PointShape.CIRCLE;
         scene.addPointCloud(pointcloud);
         viewer.fitToScreen();
         pointcloud.visible = false;
       }
+
       {
         let result = await Potree.loadPointCloud("https://sitn.ne.ch/lidar/pointclouds/aerial/2022/jura/metadata.json"); 
         let pointcloud = result.pointcloud;
@@ -124,9 +112,25 @@
         material.activeAttributeName = "rgba";
         material.shape = Potree.PointShape.CIRCLE;
         scene.addPointCloud(pointcloud);
+        viewer.fitToScreen();
+        pointcloud.visible = false;
+      }
+
+
+      {
+        let result = await Potree.loadPointCloud("https://geo-test.jura.ch/geo3d/pointclouds/aerial/2022/jura_couleur_2022/metadata.json"); 
+        let pointcloud = result.pointcloud;
+        let material = pointcloud.material;
+
+        pointcloud.name = "Lidar 2022";
+        material.size = 1.5;
+        material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
+        material.activeAttributeName = "rgba";
+        material.shape = Potree.PointShape.CIRCLE;
+        scene.addPointCloud(pointcloud);
         
         if (x>2000000 && y>1000000 && z>200) {
-          scene.view.position.set(x, y-750, z+200);
+          scene.view.position.set(x, y-150, z+75);
           scene.view.lookAt(new THREE.Vector3(x+0, y+20, z));
           material.size = 0.5;
         }else{
@@ -134,6 +138,7 @@
           material.size = 1.5;
         }
       }
+
 
     };
 
