Adaptations noms JU

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Jura Helimap 2022";
+        pointcloud.name = "ENV Lidar 2022";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
         material.activeAttributeName = "rgba";
@@ -106,7 +106,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Lidar 2022 (NE) - Swisssurface 3D";
+        pointcloud.name = "swissSURFACE3D 2022 (NE)";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
         material.activeAttributeName = "rgba";
@@ -122,7 +122,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Lidar 2022";
+        pointcloud.name = "swissSURFACE3D 2022";
         material.size = 1.5;
         material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
         material.activeAttributeName = "rgba";
