--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     viewer.setFOV(60);
     viewer.setPointBudget(4*1000*1000);
     viewer.loadSettingsFromURL();
-    viewer.setDescription('Géoportail 3D du<a target=_blank href="https://geo.jura.ch/"> SIT-Jura</a>');
+    viewer.setDescription('Géoportail 3D du<a target=_blank href="https://geo.jura.ch/"> SIT-Jura</a> - <a target=_blank href="https://www.jura.ch/DEN/SDT/GeoPortail/Aide-FAQ-Informations/GeoPortail-Documents-d-aide-pour-l-utilisateur.html">Aide</a>');
     viewer.loadGUI(() => {
       viewer.setLanguage('fr');
       $("#menu_scene").next().show();
