MaJ nom des couches

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Altimétrie JU 2020 LIDAR";
+        pointcloud.name = "Altimétrie JU 2020 Photogr.";
         material.size = 0.35;
         material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
         material.activeAttributeName = "rgba";
@@ -121,7 +121,7 @@
         let pointcloud = result.pointcloud;
         let material = pointcloud.material;
 
-        pointcloud.name = "Altimétrie ENV 2022 Photogr.";
+        pointcloud.name = "Altimétrie ENV 2022 LIDAR";
         material.size = 0.35;
         material.pointSizeType = Potree.PointSizeType.FIXE;
         material.activeAttributeName = "rgba";
