Ajout meta property

--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Géoportail 3D du SIT-Jura</title>
+
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <link rel="icon" href="./lidar_app/favicon.ico" />
-  <title>Géoportail 3D du SIT-Jura</title>
+
+  <link rel="icon" href="./lidar_app/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="./potree/build/potree/potree.css">
   <link rel="stylesheet" type="text/css" href="./potree/libs/jquery-ui/jquery-ui.min.css">
   <link rel="stylesheet" type="text/css" href="./potree/libs/openlayers3/ol.css">
   <link rel="stylesheet" type="text/css" href="./potree/libs/spectrum/spectrum.css">
   <link rel="stylesheet" type="text/css" href="./potree/libs/jstree/themes/mixed/style.css">
   <link rel="stylesheet" href="./lidar_app/sitnapp/css/sitn.css" type="text/css">
+
+  <meta property="og:site_name" content="Géoportail 3D du SIT-Jura"/>
+  <meta property="og:title" content="Géoportail 3D du SIT-Jura"/>
+  <meta property="og:description" content="Géoportail 3D du SIT-Jura"/>
+  <meta property="og:type" content="WebApplication"/>
+  <meta property="og:url" content="https://geo.jura.ch/geo3d/"/>
+  <meta property="og:image" content="https://geo.jura.ch/geo3d/lidar_app/images/VignetteGeo3D.png"/>
+
 </head>
 
 <body>
